ingress/primeiro-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: primeiro-pod
  labels:
    app:  primeiro-pod
spec:
  containers:
    - name: nginx
      image: nginx:stable
      ports:
        - containerPort: 80
      resources:
        limits:
          cpu:  "1"
          memory: "400Mi"
