ingress/segundo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: segundo-pod
  labels:
    app:  segundo-pod
spec:
  containers:
    - name: mysql
      image: mysql:latest
      ports:
        - containerPort: 3306
      resources:
        limits:
          cpu:  "1"
          memory: "400Mi"
