ingress/svc-primeiro-pod.yaml
apiVersion: v1
kind: Service
metadata:
  name: primeiro-pod
spec:
  type: ClusterIP
  selector:
    app:  primeiro-pod
  ports:
    - port: 80
      targetPort: 80
