ingress/svc-segundo-pod.yaml
apiVersion: v1
kind: Service
metadata:
  name: segundo-pod
spec:
  type: ClusterIP
  selector:
    app:  segundo-pod
  ports:
    - port: 3306
      targetPort: 3306
